changed elements to heading

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div id="movie-thumbnail-vscroll-container">
             <div id="movie-thumbnail-hscroll-wrapper">
-                <h id="movie-thumbnail-category">Documentary</h>
+                <h1 id="movie-thumbnail-category">Documentary</h1>
                 <img id="movie-thumbnail" src="" alt="" width="10" height="20" role="img" loading="lazy" fetchpriority="low" decoding="auto">
             </div>
         
