{update}: revised script element

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta property="og:description" content="Netflix clone">
         <title>Flix</title> 
         <link type="text/css" rel="stylesheet" href="style.css">
-        <script type="script/javascript" src="javascript.js"></script>
+        <script type="text/javascript" src="javascript.js"></script>
         
 
     </head>
@@ -71,7 +71,7 @@
     </body> 
     <div id="javascript-section">
         <!-- JavaScript Code -->
-        <script type="script/javascript" src="javascript.js"></script>
+        <script type="text/javascript" src="javascript.js"></script>
     </div>
 </html>
 
