{update}: rearranged and deleted elements

--- a/index.html
+++ b/index.html
@@ -45,29 +45,23 @@
             </div>
         </div>
         <div id="top-center-full-banner">
+            <div id="top-center-full-banner-left_blur"></div>
             <div id="top-center-full-banner-container">
-                <div id="top-center-full-banner-left_blur"></div>
-                <img id="top-center-full-banner-image" src="C:/Users/okino/OneDrive/Pictures/BP_Letter.jpg" alt="movie main banner" role="img" width="auto" height="550" loading="eager" decoding="async" fetchproirit="high">
+                <img id="top-center-full-banner-image" src="C:/Users/okino/OneDrive/Pictures/BP_Letter.jpg" alt="movie main banner" role="img" width="auto" height="auto" loading="eager" decoding="async" fetchproirit="high">
                 <div id="title_button-container">
-                    <h1 id="left-banner-title">variable</h1>
+                    <h1 id="left-banner-title">Black Panther</h1>
                     <button id="banner-button-p" type="button">Play</button>
                     <button id="banner-button-wl" type="button">Watch Later</button>
                     <button id="banner-button-tl" type="button">The List</button>
-                    <p id="banner-text-date">variable</p>
-                    <p id="banner-text-description">variable</p>
+                    <p id="banner-text-date">Feb 15, 2028</p>
+                    <p id="banner-text-description">T'Challa, heir to the hidden but advanced kingdom of Wakanda, must step forward to lead his people into a new future and
+                    must confront a challenger from his country's past.</p>
                 </div>
                 <!-- <img id="banner-bottom-shadow-blur" src="" alt="" width="100%" height="10" role="img" loading="lazy" fetchpriority="low" decoding="auto"> -->
                 <div id="banner-bottom-shadow-blur"></div>
             </div>
         </div>
-        <div id="movie-thumbnail-vscroll-container">
-            <div id="movie-thumbnail-hscroll-wrapper">
-                <h1 id="movie-thumbnail-category">Documentary</h1>
-                <img id="movie-thumbnail" src="" alt="" width="10" height="20" role="img" loading="lazy" fetchpriority="low" decoding="auto">
-            </div>
-        
-            
-        </div>
+        <div id="movie-thumbnail-vscroll-container"></div>
     </body> 
     <div id="javascript-section">
         <!-- JavaScript Code -->
