{update}: add unique class name top-nav-btn

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <img id="top-nav-icon-image-logo" src="https://toppng.com/uploads/preview/netflix-logo-vector-free-download-11574237114rh16slxpn2.png" alt="Netflix red lettering logo." role="img" width="30" height="30" draggable="false" loading="eager" fecthpriority="high" decoding="async"> 
             </a>
             <div id="top-nav-btn-container">
-                <a class="top-nav-btn" id="top-nav-btn" title="Movie" role="button" href="" hreflang="ca" target="_self" referrerpolicy="">Movie</a>
-                <a class="top-nav-btn" id="top-nav-btn" title="Series" role="button" href="" hreflang="ga" target="_self" referrerpolicy="">Series</a>
-                <a class="top-nav-btn" id="top-nav-btn" title="EyeBleeding_Binge_Watchable" role="button" href="" hreflang="es" target="_self" referrerpolicy="">EyeBleeding Binge-Watchable</a>
+                <a class="top-nav-btn-movie" id="top-nav-btn" title="Movie" role="button" href="" hreflang="ca" target="_self" referrerpolicy="">Movie</a>
+                <a class="top-nav-btn-series" id="top-nav-btn" title="Series" role="button" href="" hreflang="ga" target="_self" referrerpolicy="">Series</a>
+                <a class="top-nav-btn-ebw" id="top-nav-btn" title="EyeBleeding_Binge_Watchable" role="button" href="" hreflang="es" target="_self" referrerpolicy="">EyeBleeding Binge-Watchable</a>
             </div>
             <input id="top-nav-search-input" type="text" placeholder="Search..." aria-placeholder="Search..." width="10" height="8" aria-label="Search Input Field" autocapitalize="off" autocomplete="off" inputmode="search">
             <img id="top-nav-profile-circle" src="" alt="A profile pic for the user or default image." draggable="false" width="32" height="32" role="img" loading="eager" fetchpriority="high" decoding="async">
