--- a/index.html
+++ b/index.html
@@ -20,78 +20,82 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script type="text/javascript" src="javascript.js"></script>
+    <script type="text/javascript" src="javascript.js" async></script>
     <script src="https://kit.fontawesome.com/b2ef8ab3ab.js" crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
-    <nav id="top-desktop-nav">
-        <a class="top-nav-icon-bar-item-hover" id="top-nav-icon-link-logo" title="" role="link" href="" hreflang="en-US"
-            target="_self" referrerpolicy="origin">
-            <h1 id="top-nav-icon-image-text">NETFLIX</h1>
-            <img id="top-nav-icon-image-logo"
-                src="https://toppng.com/uploads/preview/netflix-logo-vector-free-download-11574237114rh16slxpn2.png"
-                alt="Netflix red lettering logo." role="img" width="30" height="30" draggable="false" loading="eager"
-                fetchpriority="high" decoding="async">
-        </a>
-        <div id="top-nav-btn-container">
-            <a class="top-nav-btn" id="top-nav-movie-btn" title="Movie" role="button" href="" hreflang="ca"
-                target="_self" referrerpolicy="">Movie</a>
-            <a class="top-nav-btn" id="top-nav-seris-btn" title="Series" role="button" href="" hreflang="ga"
-                target="_self" referrerpolicy="">Series</a>
-            <a class="top-nav-btn" id="top-nav-ebw-btn" title="EyeBleeding_Binge_Watchable" role="button" href=""
-                hreflang="es" target="_self" referrerpolicy="">EyeBleeding Binge-Watchable</a>
-        </div>
-        <input id="top-nav-search-input" type="text" placeholder="Search..." aria-placeholder="Search..." width="10"
-            height="8" aria-label="Search Input Field" autocapitalize="off" autocomplete="off" inputmode="search">
-        <div id="top-nav-onboarding-group">
-            <button id="nav-login-bg-offset" type="button" name="login-btn">Log In</button>
-            <button id="nav-signup-bg-offset" type="button" name="signup-btn">Sign Up</button>
+    <section id="top-section-banner-container">
+        <nav id="top-desktop-nav">
+            <a class="top-nav-icon-bar-item-hover" id="top-nav-icon-link-logo" title="" role="link" href="" hreflang="en-US"
+                target="_self" referrerpolicy="origin">
+                <h1 id="top-nav-icon-image-text">NETFLIX</h1>
+                <img id="top-nav-icon-image-logo"
+                    src="https://toppng.com/uploads/preview/netflix-logo-vector-free-download-11574237114rh16slxpn2.png"
+                    alt="Netflix red lettering logo." role="img" width="30" height="30" draggable="false" loading="eager"
+                    fetchpriority="high" decoding="async">
+            </a>
+            <div id="top-nav-btn-container">
+                <a class="top-nav-btn" id="top-nav-movie-btn" title="Movie" role="button" href="" hreflang="ca"
+                    target="_self" referrerpolicy="">Movie</a>
+                <a class="top-nav-btn" id="top-nav-seris-btn" title="Series" role="button" href="" hreflang="ga"
+                    target="_self" referrerpolicy="">Series</a>
+                <a class="top-nav-btn" id="top-nav-ebw-btn" title="EyeBleeding_Binge_Watchable" role="button" href=""
+                    hreflang="es" target="_self" referrerpolicy="">EyeBleeding-Binge-Watchable</a>
+            </div>
+            <input id="top-nav-search-input" type="text" placeholder="Search..." aria-placeholder="Search..." width="10"
+                height="8" aria-label="Search Input Field" autocapitalize="off" autocomplete="off" inputmode="search">
+            <div id="top-nav-onboarding-group">
+                <button id="nav-login-bg-offset" type="button" name="login-btn">Log In</button>
+                <button id="nav-signup-bg-offset" type="button" name="signup-btn">Sign Up</button>
+                <button id="nav-account-bg-offset" type="button" name="account-btn">Account</button>
+                <button id="nav-logout-bg-offset" type="button" name="logout-btn">Log Out</button>
 
-        </div>
-        <img id="top-nav-profile-circle" src="" alt="A profile pic for the user or default image." draggable="false"
-            width="32" height="32" role="img" loading="eager" fetchpriority="high" decoding="async">
-    </nav>
+            </div>
+            <img id="top-nav-profile-circle" src="img/Black Panther.jpg" alt="A profile pic for the user or default image." draggable="false"
+                width="auto" height="auto" role="img" loading="eager" fetchpriority="high" decoding="async">
+        </nav>
 
-    <div id="left-side-panel">
-        <div id="left-side-menu">
-            <div id="left-side-menu-inner">
-                <a class="left-side-menu-links" href="" hreflang="es" target="_top" rel="external"
-                    referrerpolicy="no-referrer">Test</a>
-                <a class="left-side-menu-links" href="" hreflang="as" target="-top" rel="external"
-                    referrerpolicy="no-referrer">Test</a>
-                <a class="left-side-menu-links" href="" hreflang="en" target="-top" rel="external"
-                    referrerpolicy="no-referrer">Test</a>
+        <div id="left-side-panel">
+            <div id="left-side-menu">
+                <div id="left-side-menu-inner">
+                    <a class="left-side-menu-links" href="" hreflang="es" target="_top" rel="external"
+                        referrerpolicy="no-referrer">Movie</a>
+                    <a class="left-side-menu-links" href="" hreflang="as" target="-top" rel="external"
+                        referrerpolicy="no-referrer">Series</a>
+                    <a class="left-side-menu-links" href="" hreflang="en" target="-top" rel="external"
+                        referrerpolicy="no-referrer">EyeBleeding-Binge-Watchable</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div id="top-center-full-banner">
-        <div id="top-center-full-banner-left_blur"></div>
-        <div id="top-center-full-banner-container">
-            <img id="top-center-full-banner-image" src="C:/Users/okino/OneDrive/Pictures/BP_Letter.jpg"
-                alt="movie main banner" role="img" width="auto" height="auto" loading="eager" decoding="async"
-                fetchpriority="high">
-            <div id="title_button-container">
-                <h1 id="left-banner-title">Black Panther</h1>
-                <button id="banner-button-p" type="button" name="play-btn">Play</button>
-                <button id="banner-button-wl" type="button" name="watch_later-btn">Watch Later</button>
-                <button id="banner-button-tl" type="button" name="bt-the_list-btn">The List</button>
-                <p id="banner-text-date">Feb 15, 2028</p>
-                <p id="banner-text-description">T'Challa, heir to the hidden but advanced kingdom of Wakanda, must step
-                    forward to lead his people into a new future and
-                    must confront a challenger from his country's past.</p>
+
+        <div id="top-center-full-banner">
+            <div id="banner-left-shadow-blur"></div>
+            <div id="top-center-full-banner-container">
+                <img id="top-center-full-banner-image" src="img/BP_Letter.jpg"
+                    alt="movie main banner" role="img" width="auto" height="auto" loading="eager" decoding="async"
+                    fetchpriority="high">
+                <div id="title_button-container">
+                    <h1 id="left-banner-title">Black Panther</h1>
+                    <button id="banner-button-p" type="button" name="play-btn">Play</button>
+                    <button id="banner-button-wl" type="button" name="watch_later-btn">Watch Later</button>
+                    <button id="banner-button-tl" type="button" name="bt-the_list-btn">The List</button>
+                    <p id="banner-text-date">Feb 15, 2028</p>
+                    <p id="banner-text-description">T'Challa, heir to the hidden but advanced kingdom of Wakanda, must step
+                        forward to lead his people into a new future and
+                        must confront a challenger from his country's past.</p>
+                </div>
+                <!-- <img id="banner-bottom-shadow-blur" src="" alt="" width="100%" height="10" role="img" loading="lazy" fetchpriority="low" decoding="auto"> -->
+                <div id="banner-bottom-shadow-blur"></div>
             </div>
-            <!-- <img id="banner-bottom-shadow-blur" src="" alt="" width="100%" height="10" role="img" loading="lazy" fetchpriority="low" decoding="auto"> -->
-            <div id="banner-bottom-shadow-blur"></div>
         </div>
-    </div>
+    </section>
+    
     <!-- <div id="movie-title-thumbnail-vscroll-container"></div> -->
 </body>
 <div id="javascript-section">
     <!-- JavaScript Code -->
-    <script type="text/javascript" src="javascript.js"></script>
+    <!-- <script type="text/javascript" src="javascript.js"></> -->
 </div>
 
 </html>
