{update}: change script load to defer and clean up file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE HTML>
 <html lang="en-US" xml:lang="en-US" xmlns="placeholder">
 
 <head>
@@ -20,7 +20,7 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script type="text/javascript" src="javascript.js" async></script>
+    <script type="text/javascript" src="javascript.js" defer></script>
     <script src="https://kit.fontawesome.com/b2ef8ab3ab.js" crossorigin="anonymous"></script>
 </head>
 
@@ -36,11 +36,11 @@
                     fetchpriority="high" decoding="async">
             </a>
             <div id="top-nav-btn-container">
-                <a class="top-nav-btn" id="top-nav-movie-btn" title="Movie" role="button" href="" hreflang="ca"
+                <a class="top-nav-btn" id="top-nav-movie-btn" title="movie" role="button" href="" hreflang="ca"
                     target="_self" referrerpolicy="">Movie</a>
-                <a class="top-nav-btn" id="top-nav-seris-btn" title="Series" role="button" href="" hreflang="ga"
+                <a class="top-nav-btn" id="top-nav-seris-btn" title="series" role="button" href="" hreflang="ga"
                     target="_self" referrerpolicy="">Series</a>
-                <a class="top-nav-btn" id="top-nav-ebw-btn" title="EyeBleeding_Binge_Watchable" role="button" href=""
+                <a class="top-nav-btn" id="top-nav-ebw-btn" title="eyeBleeding_binge_watchable" role="button" href=""
                     hreflang="es" target="_self" referrerpolicy="">EyeBleeding-Binge-Watchable</a>
             </div>
             <input id="top-nav-search-input" type="text" placeholder="Search..." aria-placeholder="Search..." width="10"
@@ -93,6 +93,7 @@
     
     <!-- <div id="movie-title-thumbnail-vscroll-container"></div> -->
 </body>
+
 <div id="javascript-section">
     <!-- JavaScript Code -->
     <!-- <script type="text/javascript" src="javascript.js"></> -->
@@ -100,7 +101,3 @@
 
 </html>
 
-<!-- <input id="tnb-google-search-input" type="text" placeholder="Search..." autocomplete="off" onkeydown="TopNavBar.googleSearchAttachKeyPressHandler(event)" aria-label="Search field" oninput="TopNavBar.searchWithSuggestions(this)" onfocus="TopNavBar.searchWithSuggestions(this)" onblur="TopNavBar.searchFieldLostFocus(event)">
-<button id="avatar-btn" aria-haspopup="true" class="style-scope ytd-topbar-menu-button-renderer" aria-label="Account menu">
-    <yt-img-shadow height="32" width="32" class="style-scope ytd-topbar-menu-button-renderer no-transition" style="background-color: transparent;" loaded=""><img id="img" draggable="false" class="style-scope yt-img-shadow" alt="Avatar image" height="32" width="32" src="https://yt3.ggpht.com/yti/ANjgQV-V6oUfTJZDjo01ZaA6fcf7xqZesQD6QFg2RSW4d7GnKCU=s88-c-k-c0x00ffffff-no-rj"></yt-img-shadow>
-  </button> -->
