{update}: clean up code

--- a/index.html
+++ b/index.html
@@ -7,32 +7,35 @@
     <meta content="Okino Kamali Leiba,  Netflix clone" name="keywords" />
     <meta content="Okino Kamali Leiba" name="author" />
     <meta content="Netflix clone" name="description">
-    <meta name="author" content="Okino Kamali Leiba">
 
     <meta content="website" property="og:type" />
     <meta content="Okino Leiba's Resume" property="og:title" />
     <meta content="en_US" property="og:locale" />
     <meta property="og:image" content="">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:wight" content="440">
-    <meta property="og:description" content="Netflix clone">
+    <meta property="og:image:width" content="550">
+    <meta property="og:description" content="Netflix Clone">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src *; style-src-elem *; connect-src * " > -->
     <title>Flix</title>
     <link type="text/css" rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script type="text/javascript" src="https://kit.fontawesome.com/b2ef8ab3ab.js" crossorigin="anonymous"></script>
+    <!--Javascript Load Option Before HTML Rendering -->
     <script type="text/javascript" src="javascript.js" defer></script>
-    <script src="https://kit.fontawesome.com/b2ef8ab3ab.js" crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
+    <!-- Banner Hero and Nav Section-->
     <section id="top-section-banner-container">
         <nav id="top-desktop-nav">
             <a class="top-nav-icon-bar-item-hover" id="top-nav-icon-link-logo" title="" role="link" href="" hreflang="en-US"
                 target="_self" referrerpolicy="origin">
-                <h1 id="top-nav-icon-image-text">NETFLIX</h1>
+                <h1 id="top-nav-icon-image-text">NETFLEX</h1>
                 <img id="top-nav-icon-image-logo"
                     src="https://toppng.com/uploads/preview/netflix-logo-vector-free-download-11574237114rh16slxpn2.png"
-                    alt="Netflix red lettering logo." role="img" width="30" height="30" draggable="false" loading="eager"
+                    alt="Netflix red lettering logo" role="img" width=30 height=30 draggable="false" loading="eager"
                     fetchpriority="high" decoding="async">
             </a>
             <div id="top-nav-btn-container">
@@ -68,7 +71,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- Banner Hero Div-->
         <div id="top-center-full-banner">
             <div id="banner-left-shadow-blur"></div>
             <div id="top-center-full-banner-container">
@@ -91,9 +94,10 @@
         </div>
     </section>
     
+    <!--["movie-title-thumbnail-vscroll-container] Section Created with JavaScript-->
     <!-- <div id="movie-title-thumbnail-vscroll-container"></div> -->
 </body>
-
+<!--Javascript Load Option After HTML Rendering -->
 <div id="javascript-section">
     <!-- JavaScript Code -->
     <!-- <script type="text/javascript" src="javascript.js"></> -->
