{update}: add descriptors and annotations  and completed adding all tags

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script type="text/javascript" src="https://kit.fontawesome.com/b2ef8ab3ab.js" crossorigin="anonymous"></script>
     <!--Javascript Load Option Before HTML Rendering -->
-    <script type="text/javascript" src="javascript.js" defer></script>
+    <script type="module"  src="javascript.js" defer></script>
     
 </head>
 
