--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
     <script type="text/javascript" src="https://kit.fontawesome.com/b2ef8ab3ab.js" crossorigin="anonymous"></script>
     <!--Javascript Load Option Before HTML Rendering -->
     <script type="module"  src="javascript.js" defer></script>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="utility.js"></script>
     
 </head>
 
 <body>
-    <!-- Banner Hero and Nav Section-->
+    <!--
+    <!- - Banner Hero and Nav Section- ->
     <section id="top-section-banner-container">
         <nav id="top-desktop-nav">
             <a class="top-nav-icon-bar-item-hover" id="top-nav-icon-link-logo" title="" role="link" href="" hreflang="en-US"
@@ -72,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <!-- Banner Hero Div-->
+        <!- - Banner Hero Div- ->
         <div id="top-center-full-banner">
             <div id="banner-left-shadow-blur"></div>
             <div id="top-center-full-banner-container">
@@ -89,11 +92,11 @@
                         forward to lead his people into a new future and
                         must confront a challenger from his country's past.</p>
                 </div>
-                <!-- <img id="banner-bottom-shadow-blur" src="" alt="" width="100%" height="10" role="img" loading="lazy" fetchpriority="low" decoding="auto"> -->
+                <!- - <img id="banner-bottom-shadow-blur" src="" alt="" width="100%" height="10" role="img" loading="lazy" fetchpriority="low" decoding="auto"> - ->
                 <div id="banner-bottom-shadow-blur"></div>
             </div>
         </div>
-    </section>
+    </section> -->
     
     <!--["movie-title-thumbnail-vscroll-container] Section Created with JavaScript-->
     <!-- <div id="movie-title-thumbnail-vscroll-container"></div> -->
