{update}: minor update

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script type="text/javascript" src="https://kit.fontawesome.com/b2ef8ab3ab.js" crossorigin="anonymous"></script>
     <!--Javascript Load Option Before HTML Rendering -->
+    <script type="module" src="main.js" defer></script>
     <script type="module"  src="javascript.js" defer></script>
-    <script type="module" src="main.js"></script>
     <script type="module" src="utility.js"></script>
     
 </head>
 
-<body>
+
+    <body>
     <!--
     <!- - Banner Hero and Nav Section- ->
     <section id="top-section-banner-container">
@@ -96,11 +97,13 @@
                 <div id="banner-bottom-shadow-blur"></div>
             </div>
         </div>
-    </section> -->
-    
+    </section>
+    -->
+</body> 
+
     <!--["movie-title-thumbnail-vscroll-container] Section Created with JavaScript-->
     <!-- <div id="movie-title-thumbnail-vscroll-container"></div> -->
-</body>
+
 <!--Javascript Load Option After HTML Rendering -->
 <div id="javascript-section">
     <!-- JavaScript Code -->
