{update}: minor update comment javascript module

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script type="module"  src="javascript.js" defer></script>
     <script type="module" src="utility.js"></script>
     <!--Javascript CSS-->
-    <script type="module" src="style.js"></script>
+    <!-- <script type="module" src="style.js"></script> -->
     <!-- <script type="module" src="style_object.js"></script> -->
      
 </head>
@@ -53,7 +53,7 @@
                     <a class="top-nav-btn" id="top-nav-ebw-btn" title="eyeBleeding_binge_watchable" role="button" href=""
                         hreflang="es" target="_self" referrerpolicy="">EyeBleeding-Binge-Watchable</a>
                 </div>
-                <input id="top-nav-search-input" type="text" placeholder="Search..." aria-placeholder="Search..." width="10"
+                <input id="top-nav-search-input" type="search" placeholder="Search..." aria-placeholder="Search..." width="10"
                     height="8" aria-label="Search Input Field" autocapitalize="off" autocomplete="off" inputmode="search">
                 <div id="top-nav-onboarding-group">
                     <button id="nav-login-bg-offset" type="button" name="login-btn">Log In</button>
