{update}: add and comment script tags

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <script type="module" src="main.js" defer></script>
     <script type="module"  src="javascript.js" defer></script>
     <script type="module" src="utility.js"></script>
+    <script type="module" src="managecontent.js"></script>
+    <script type="module" data-main="main.js" src="require.js"></script>
     <!--Javascript CSS-->
     <!-- <script type="module" src="style.js"></script> -->
     <!-- <script type="module" src="style_object.js"></script> -->
